--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ footer {
 
 /* Floating Shapes */
 .floating-shape {
+    max-height: 100vh;
     position: absolute;
     border-radius: 30%; /* Less roundness */
     opacity: 0.2;
