--- a/style.css
+++ b/style.css
@@ -194,6 +194,17 @@ main {
     border: 2px solid #007BFF;t*/
 }
 
+#hideOnMobile {
+    display: block; /* or any other display style */
+}
+
+/* Styles for mobile devices */
+@media only screen and (max-width: 800px) {
+    #hideOnMobile {
+        display: none; /* Hide the element on mobile */
+    }
+}
+
 footer {
     border-radius: 0px;
     color: #F5DFBB;
